# SonicSync-App

./: .gitignore  gql-codegen.yml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src-tauri/: .gitignore  .taurignore  .tauriignore  Cargo.toml  build.rs  example.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/database/: commands.rs  mod.rs  models.rs  runtime.rs  search_engine.rs
src-tauri/src/dialogs/: mod.rs
src-tauri/src/menus/: bar.rs  commands.rs  events.rs  mod.rs
src-tauri/src/printing/: commands.rs  mod.rs
src-tauri/src/printing/layouts/: avery_8x20.rs  mod.rs
src-tauri/swift-library/.build/: debug.yaml
src-tauri/swift-library/.build/x86_64-apple-macosx/: build.db
src-tauri/swift-library/.build/x86_64-apple-macosx/debug/: description.json  swift_library.swiftdoc  swift_library.swiftmodule  swift_library.swiftsourceinfo
src-tauri/swift-library/.build/x86_64-apple-macosx/debug/ModuleCache/27NY4CY1EC9S0/: Accessibility-1O6KZ3QWBQDPP.pcm  ApplicationServices-XV6KNRUFW5PV.pcm  CFNetwork-WOPYBVYTVV3P.pcm  CUPS-DX3ZFE41P7MG.pcm  Cocoa-1ZSAXE79IU0C7.pcm  ColorSync-3E49XPWC4LN6N.pcm  (+29 more)
src-tauri/swift-library/.build/x86_64-apple-macosx/debug/swift-library.product/: Objects.LinkFileList
src-tauri/swift-library/.build/x86_64-apple-macosx/debug/swift_library.build/: master.priors  master.swiftdeps  master.swiftdeps~  module.modulemap  output-file-map.json  swift-library-Swift.h  swift-library.d  swift-library.swiftdeps  swift-library.swiftdeps~  swift_library.emit-module.d
src-tauri/swift-library/Sources/swift-library/: swift-library.swift
src-tauri/tests/: print_dialog.rs
(+107 files in other folders)
