[package]
name = "sonic-sync"
version = "0.0.2"
description = "A Tauri App"
authors = ["Michael Aboah"]
license = ""
repository = ""
default-run = "sonic-sync"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0.104"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = ["api-all"] }
polodb_core = "4.4.0"
log = "0.4.19"

# Tauri Plugins
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
bson = "2.6.1"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
reqwest = "0.11.20"


[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
# tauri-plugin-window = "2.0.0-alpha.1"
# tauri-plugin-os = "2.0.0-alpha.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
